--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
 </div>
 
 <script>
-var valeurs_check_boxes = [] ;
 var cases = document.querySelectorAll('input[name="type_filtre"]');
 cases.forEach(function(checkbox) {
   checkbox.addEventListener('change', function() {
@@ -111,7 +110,9 @@ cases.forEach(function(checkbox) {
 	{document.getElementsByClassName('radio_'+ this.getAttribute("num_cb"))[i].style = "display : inline" ;} ;
     }
     else
-    {}	    
+    {for (i=0 ; i < document.getElementsByClassName('radio_'+ this.getAttribute("num_cb")).length ; i++)
+	{document.getElementsByClassName('radio_'+ this.getAttribute("num_cb"))[i].style = "display : none" ;} ;
+    }	    
   })
 });
 
