--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <legend>Vous pouvez filtrer les données selon les critères suivants :</legend>
 <div>
 <input type="checkbox" num_cb="1" id ="filtre_ASL" name="type_filtre"/>
-<label for="filtre_ASL">ASL</label>
+<label for="filtre_ASL">ASL</label><br>
 </div>
 <div class="radio_1" style="display: none;">
 <input type="radio" id ="asl1" name="asl"/ checked>
@@ -67,7 +67,7 @@
 </div>
 <div>
 <input type="checkbox" num_cb="2" id ="filtre_benevole" name="type_filtre"/>
-<label for="filtre_benevole">Bénévoles</label>
+<label for="filtre_benevole">Bénévoles</label><br>
 </div>
 <div class="radio_2" style="display: none;">
 <input type="radio" id ="bene1" name="bene"/ checked>
@@ -77,7 +77,7 @@
 </div>
 <div>
 <input type="checkbox" num_cb="3" id ="filtre_type_act" name="type_filtre"/>
-<label for="filtre_type_act">Types d'activités auxquelles le public s'est inscrit</label>
+<label for="filtre_type_act">Types d'activités auxquelles le public s'est inscrit</label><br>
 </div>
 <div class="radio_3" style="display: none;">
 <input type="radio" id ="type_act_1" name="type_act"/ checked>
@@ -86,7 +86,7 @@
 <label for="type_act_2">filtre</label>
 </div>
 <input type="checkbox" num_cb="4" id ="filtre_nb_act" name="type_filtre"/>
-<label for="filtre_nb_act">Nombre d'activités auxquelles le public s'est inscrit</label>
+<label for="filtre_nb_act">Nombre d'activités auxquelles le public s'est inscrit</label><br>
 </div>
 <div class="radio_4" style="display: none;">
 <input type="radio" id ="nb_act_1" name="nb_act"/ checked>
