--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 
 
-<fieldset style: "border: 1px solid #666;
-  border-radius: 8px;">
+<fieldset style= "border: 1px solid #666;
+  border-radius: 8px">
   <legend>Vous pouvez filtrer les données selon les critères suivants :</legend>
 <div>
 <input type="checkbox" num_cb="1" id ="filtre_ASL" name="type_filtre"/>
