--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 
 
-<fieldset style= "height: 250px; border: 1px solid #666;
+<fieldset style= "border: 1px solid #666;
   border-radius: 8px">
-  <legend>Vous pouvez filtrer les données selon les critères suivants :</legend>
+  <legend>Vous pouvez filtrer les données selon les critères suivants (cocher les cases pour fixer les critères) :</legend>
 <div>
 <input type="checkbox" num_cb="1" id ="filtre_ASL" name="type_filtre"/>
 <label for="filtre_ASL">ASL</label><br>
@@ -86,6 +86,7 @@
 <input type="radio" id ="type_act_2" name="type_act"/>
 <label for="type_act_2">filtre</label>
 </div>
+<div>
 <input type="checkbox" num_cb="4" id ="filtre_nb_act" name="type_filtre"/>
 <label for="filtre_nb_act">Nombre d'activités auxquelles le public s'est inscrit</label><br>
 </div>
