--- a/index.html
+++ b/index.html
@@ -121,6 +121,22 @@ cases.forEach(function(checkbox) {
 
 </script>
 
+<div id="slider"></div>
+		
+<script>
+
+var slider = document.getElementById('slider');
+
+noUiSlider.create(slider, {
+    start: [20, 80],
+    connect: true,
+    range: {
+        'min': 0,
+        'max': 100
+    }
+});
+</script>
+	
 <script>
 /*
     var range = document.getElementById('type_act');
