--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	  
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
+    <script src="./stylesheets/slider.css"></script> 
     <script src="./javascripts/slider.js"></script>
 
 </head>
