--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <input type="radio" id ="nb_act_2" name="nb_act"/>
 <label for="nb_act_2">filtre</label>
 </div>
-<div id="slider"></div>
+<div id="slider" style="height: 100px;"></div>
 </fieldset>
 
 <div>	
