--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	  
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
-    <link rel="stylesheet" type="text/css" href="stylesheets/slider.css" media="screen">
+    <link href="stylesheets/slider.css" rel="stylesheet">
     <script src="./javascripts/slider.js"></script>
 
 </head>
