--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script> 
     <script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-geodesy/v0.1.0/leaflet-geodesy.js"></script>
-    //<link href="//cdn.bootcss.com/noUiSlider/8.5.1/nouislider.min.css" rel="stylesheet">
-    // <script src="//cdn.bootcss.com/noUiSlider/8.5.1/nouislider.js"></script>
-	  
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.min.js"></script>
+
     <script src="./javascripts/qpv_qva.json"></script>
     <script src="./javascripts/IRIS.json"></script>
-    <link href="stylesheets/slider.css" rel="stylesheet">
-    <script src="./javascripts/slider.js"></script>
 
 </head>
 <body>
