--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
 <input type="radio" id ="nb_act_2" name="nb_act"/>
 <label for="nb_act_2">filtre</label>
 </div>
-<div id="slider"></div>
+<div style="background-color:#191970">
+<div id="slider">
+</div>
+</div>
 </fieldset>
 
 <div>	
