--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 -->
 <div id="slider">
 </div>
+</div>
 <div>
 <input type="checkbox" num_cb="4" id ="filtre_nb_act" name="type_filtre"/>
 <label for="filtre_nb_act">Nombre d'activités auxquelles le public s'est inscrit</label><br>
