--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ var slider = document.getElementById('slider');
 noUiSlider.create(slider, {
     start: [20, 80],
     connect: true,
-    tooltips: [wNumb({decimals: 0}), wNumb({decimals: 0})],
+    tooltips: [true, true],
     range: {
         'min': 0,
         'max': 100
