--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script> 
     <script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-geodesy/v0.1.0/leaflet-geodesy.js"></script>
-     <link rel="stylesheet" type="text/css" href="./stylesheets/slider.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/slider.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.js"></script>
 
     <script src="./javascripts/qpv_qva.json"></script>
@@ -91,7 +91,9 @@
 <label for="filtre_nb_act">Nombre d'activités auxquelles le public s'est inscrit</label><br>
 </div>
 <div class="radio_4" style="display: none;">
+<div style="height:100px">	
 <div id="slider">
+</div>
 </div>
 </div>
 
