--- a/index.html
+++ b/index.html
@@ -91,8 +91,10 @@
 <label for="filtre_nb_act">Nombre d'activités auxquelles le public s'est inscrit</label><br>
 </div>
 <div class="radio_4" style="display: none;">
-<div style="height:100px">	
+<div style="height:80px">
+<div style="height:20px">
 <div id="slider">
+</div>
 </div>
 </div>
 </div>
