--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 const type_act = ['clas','acm','jeunesse','famille','sorties_famille','cb','culture','paniers_bio','asl','paniers_bio','reveillon','autres'] ;
 type_act.forEach(function(element,index)
 {
-var id_checkox = document.createElement("id");
+var id_checkbox = document.createElement("id");
 id_checkbox.innerHTML += '<input type="checkbox" id ="type_act_" + index name="type_act_" + index/>' ;
 id_checkbox.innerHTML += '<label for="type_act_" + index>type_act[index]</label>' ;
 document.getElementsByClassName('radio_3').appendChild(id_checkbox);
