--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ type_act.forEach(function(element,index)
 var id_checkbox = document.createElement("id");
 id_checkbox.innerHTML += '<input type="checkbox" id ="type_act_" + index name="type_act_" + index/>' ;
 id_checkbox.innerHTML += '<label for="type_act_" + index>type_act[index]</label>' ;
-document.getElementsByClassName('radio_3').appendChild(id_checkbox);
+id_checkbox.className = "radio_3";
 }) ;
 </script>
 </div>
