--- a/index.html
+++ b/index.html
@@ -83,10 +83,14 @@
 const type_act = ['clas','acm','jeunesse','famille','sorties_famille','cb','culture','paniers_bio','asl','paniers_bio','reveillon','autres'] ;
 type_act.forEach(function(element,index)
 {
-var id_checkbox = document.createElement('div');
-id_checkbox.innerHTML += '<input type="checkbox" id ="type_act_" + index name="type_act_" + index/>' ;
-id_checkbox.innerHTML += '<label for="type_act_" + index>type_act[index]</label>' ;
-id_checkbox.classList.add('radio_3') ;
+var checkbox = document.createElement('input');
+checkbox.type = "checkbox"; 
+checkbox.id = "type_act_"+index ;
+var label = document.createElement('label'); 
+label.htmlFor = "type_act_"+index ;              
+// label.appendChild(document.createTextNode('This is the label for checkbox.')); 
+ document.getElementsByClassName('radio_3').appendChild(checkbox); 
+ document.getElementsByClassName('radio_3').appendChild(label); 
 }) ;
 </script>
 </div>
