--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@ checkbox.type = "checkbox";
 checkbox.id = "type_act_"+index ;
 var label = document.createElement('label'); 
 label.htmlFor = "type_act_"+index ; 
-console.log(document.getElementsByClassName('radio_3').length) ;
 // label.appendChild(document.createTextNode('This is the label for checkbox.')); 
-// document.getElementsByClassName('radio_3').appendChild(checkbox); 
-// document.getElementsByClassName('radio_3').appendChild(label); 
+document.getElementsByClassName('radio_3')[0].appendChild(checkbox); 
+document.getElementsByClassName('radio_3')[0].appendChild(label); 
 }) ;
 </script>
 </div>
