--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ var checkbox = document.createElement('input');
 checkbox.type = "checkbox"; 
 checkbox.id = "type_act_"+index ;
 var label = document.createElement('label'); 
-label.htmlFor = element ; 
-// label.appendChild(document.createTextNode('This is the label for checkbox.')); 
+label.htmlFor = "type_act_"+index ; 
+label.appendChild(document.createTextNode(element)); 
 document.getElementsByClassName('radio_3')[0].appendChild(checkbox); 
 document.getElementsByClassName('radio_3')[0].appendChild(label); 
 }) ;
