--- a/index.html
+++ b/index.html
@@ -151,7 +151,13 @@ noUiSlider.create(slider, {
     start: [20, 80],
     step: 1,
     connect: true,
-    tooltips: [true, true],
+    tooltips: [format: {
+        to: (v) => parseFloat(v).toFixed(0),
+        from: (v) => parseFloat(v).toFixed(0)
+    },format: {
+        to: (v) => parseFloat(v).toFixed(0),
+        from: (v) => parseFloat(v).toFixed(0)
+    }]
     range: {
         'min': 0,
         'max': 100
