--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ document.getElementsByClassName('radio_3')[0].appendChild(label);
 </div>
 <div>
 <input type="checkbox" num_cb="4" id ="filtre_nb_act" name="type_filtre"/>
-<label for="filtre_nb_act">Nombre d'activités auxquelles le public s'est inscrit</label><br>
+<label for="filtre_nb_act">Nombre total d'inscriptions aux activités sur la période (choisir nombre minimum et maximum)</label><br>
 </div>
 <div class="radio_4" style="display: none;">
 <div style="height:80px">
