--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <label for="filtre_type_act">Types d'activités auxquelles le public s'est inscrit</label><br>
 </div>
 <div class="radio_3" style="display: none;">
+<p> choix des activités </p>
 <script>
 const type_act = ['clas','acm','jeunesse','famille','sorties_famille','cartes_blanches','culture','sport','asl','paniers_bio','reveillon','autres'] ;
 type_act.forEach(function(element,index)
@@ -93,6 +94,8 @@ document.getElementsByClassName('radio_3')[0].appendChild(checkbox);
 document.getElementsByClassName('radio_3')[0].appendChild(label); 
 }) ;
 </script>
+<p> inscriptions à l'ensemble des activités sélectionnées ou au moins à une des activités </p>
+<p> inscriptions uniquement aux activités sélectionnées ou au moins aux activités sélectionnées </p>
 </div>
 <div>
 <input type="checkbox" num_cb="4" id ="filtre_nb_act" name="type_filtre"/>
