--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ document.getElementsByClassName('radio_3')[0].appendChild(label);
 
 
 
-// on ajoute des listeners qui font apparaître-disparaître les choix possibles pour chaque filtre
+<!--on ajoute des listeners qui font apparaître-disparaître les choix possibles pour chaque filtre-->
 <script>
 var cases = document.querySelectorAll('input[name="type_filtre"]');
 cases.forEach(function(checkbox) {
