--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 <fieldset style= "border: 1px solid #666;
   border-radius: 8px">
   <legend>Vous pouvez filtrer les données selon les critères suivants (cocher les cases pour fixer les critères) :</legend>
+
+<fieldset style= "border: 1px solid #666;
+  border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="1" id ="filtre_ASL" name="type_filtre"/>
 <label for="filtre_ASL">ASL</label><br>
@@ -64,6 +67,7 @@
 <input type="radio" id ="asl2" name="asl"/>
 <label for="asl2">inscrits uniquement aux ASL</label>
 </div>
+</fieldset>
 <div>
 <input type="checkbox" num_cb="2" id ="filtre_benevole" name="type_filtre"/>
 <label for="filtre_benevole">Bénévoles</label><br>
