--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 <label for="asl2">inscrits uniquement aux ASL</label>
 </div>
 </fieldset>
+	
+<fieldset style= "border: 1px solid #666;
+  border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="2" id ="filtre_benevole" name="type_filtre"/>
 <label for="filtre_benevole">Bénévoles</label><br>
@@ -78,6 +81,10 @@
 <input type="radio" id ="bene2" name="bene"/>
 <label for="asl2">bénévole sur au moins un type d'activité</label>
 </div>
+</fieldset>
+	
+<fieldset style= "border: 1px solid #666;
+  border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="3" id ="filtre_type_act" name="type_filtre"/>
 <label for="filtre_type_act">Types d'activités auxquelles le public s'est inscrit</label><br>
@@ -101,6 +108,10 @@ document.getElementsByClassName('radio_3')[0].appendChild(label);
 <p><b><u>2- inscriptions à au moins une des activités sélectionnées OU à l'ensemble des activités sélectionnées</u></b></p>
 <p><b><u>3- inscriptions au moins aux activités sélectionnées OU uniquement aux activités sélectionnées</u></b></p>
 </div>
+</fieldset>
+	
+<fieldset style= "border: 1px solid #666;
+  border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="4" id ="filtre_nb_act" name="type_filtre"/>
 <label for="filtre_nb_act">Nombre total d'inscriptions aux activités sur la période (choisir nombre minimum et maximum)</label><br>
@@ -114,7 +125,8 @@ document.getElementsByClassName('radio_3')[0].appendChild(label);
 </div>
 </div>
 </div>
-
+</fieldset>
+	
 </fieldset>
 
 <div>	
