--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@ document.getElementsByClassName('radio_3')[0].appendChild(label);
 }) ;
 </script>
 <p><b><u>2- inscriptions à au moins une des activités sélectionnées OU à l'ensemble des activités sélectionnées</u></b></p>
+<input type="radio" id ="choix_ou" / checked>
+<label for="choix_ou">au moins une des activités</label>
+<input type="radio" id ="choix_et" />
+<label for="choix_et">toutes les activités</label>
 <p><b><u>3- inscriptions au moins aux activités sélectionnées OU uniquement aux activités sélectionnées</u></b></p>
 </div>
 </fieldset>
