--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ document.getElementsByClassName('radio_3')[0].appendChild(label);
 </script>
 <p><b><u>2- inscriptions à au moins une des activités sélectionnées OU à l'ensemble des activités sélectionnées</u></b></p>
 <div class="choix_ou_et">
-<input type="radio" id ="choix_ou" / checked>
+<input type="radio" id ="choix_ou" name="choix_ou_et" / checked>
 <label for="choix_ou">au moins une des activités</label>
-<input type="radio" id ="choix_et" />
+<input type="radio" id ="choix_et" name="choix_ou_et">
 <label for="choix_et">toutes les activités</label>
 </div>
 <p><b><u>3- inscriptions au moins aux activités sélectionnées OU uniquement aux activités sélectionnées</u></b></p>
