--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@ document.getElementsByClassName('radio_3')[0].appendChild(label);
 <label for="choix_et">toutes les activités</label>
 </div>
 <p><b><u>3- inscriptions au moins aux activités sélectionnées OU uniquement aux activités sélectionnées</u></b></p>
+<div class="choix_aumoins_auplus">
+<input type="radio" id ="choix_aumoins" name="choix_aumoins_auplus" / checked>
+<label for="choix_aumoins">au moins aux activités sélectionnées</label>
+<input type="radio" id ="choix_auplus" name="choix_aumoins_auplus">
+<label for="choix_auplus">uniquement aux activités sélectionnées</label>
+</div>
 </div>
 </fieldset>
 	
