--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <fieldset style= "border: 1px solid #666;
   border-radius: 8px">
-  <legend>Vous pouvez filtrer les données selon les critères suivants (cocher les cases pour fixer les critères) :</legend>
+  <legend><b>Vous pouvez filtrer les données selon les critères suivants (cocher les cases pour fixer les critères) :</b></legend>
 
 <fieldset style= "border: 1px solid #666;
   border-radius: 8px">
