--- a/index.html
+++ b/index.html
@@ -177,8 +177,13 @@ cases.forEach(function(checkbox) {
 // script qui recherche le nombre minimum et maximum d'activité puis crée le slider
 <script>
 
-var a = ['a', 1, 'a', 2, '1'];
-var unique = a.filter(function(value, index, self) {
+var diff_nb_act = tableau_sortie.map( element => {
+    let properties = {
+   "nb_tot_act": element.nb_tot_act
+    };
+    return properties;
+    });
+var unique = diff_nb_act.filter(function(value, index, self) {
   return self.indexOf(value) === index;
 });
 console.log(unique) ;
