--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ cases.forEach(function(checkbox) {
 // script qui recherche le nombre minimum et maximum d'activité puis crée le slider
 <script>
 
-var diff_nb_act = tableau_sortie.map( element => {
+var diff_nb_act = data.map( element => {
     let properties = {
    "nb_tot_act": element.nb_tot_act
     };
