--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ console.log(diff_nb_act) ;
 var unique = diff_nb_act.filter(function(value, index, self) {
   return self.indexOf(value) === index;
 });
+unique.sort() ;
 console.log(unique) ;
 
 
