--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@ console.log(diff_nb_act) ;
 var unique = diff_nb_act.filter(function(value, index, self) {
   return self.indexOf(value) === index;
 });
-unique.sort() ;
+unique.sort(function(a, b) {
+  return a - b;}) ;
 console.log(unique) ;
 
 
