--- a/index.html
+++ b/index.html
@@ -191,8 +191,9 @@ console.log(unique) ;
 var rangers = {}
 for (i = 0; i < unique.length; ++i) {
   var pourcent = Math.ceil((100/unique.length) * i)
-  if ( i < unique.length-1 ) { rangers[pourcent +'%'] = [ unique[i],  unique[i+1] - unique[i] ] }
-  if ( i == unique.length-1 ) { rangers['max'] = [unique[unique.length-1]]; }
+  if ( i == 0 ) { rangers['min'] = unique[0]; }
+  else if ( i < unique.length-1 ) { rangers[pourcent +'%'] = [ unique[i],  unique[i+1] - unique[i] ] ;}
+  else if ( i == unique.length-1 ) { rangers['max'] = [unique[unique.length-1]]; }
 }
 
 var slider = document.getElementById('slider');
