--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ localStorage.setItem("btn_click", true) ;
 // on récupère le et/ou et le au moins/uniquement
 var lien_act_select ;
 var val_autres_act ;
-if (document.getElementById('choix_ou_').checked)
+if (document.getElementById('choix_ou').checked)
 	{
 	lien_act_select = '&&' ;
 	}
