--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ if (document.getElementById('choix_ou').checked)
 	{
 	lien_act_select = '||' ;
 	}
-if (document.getElementById('choix_au_moins').checked)
+if (document.getElementById('choix_aumoins').checked)
 	{
 	val_autres_act = '>= 0' ;
 	}
