--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ console.log(slider) ;
 
 <script>
 var tableau_sortie = [] ;
-var string_filtre ;
+var string_filtre = '';
 // fonction appelée par le clique du bouton
 // on stocke tous les filtres saisis par l'utilisateur avant de rafraichier la page
 	
