--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ else
 	{
 	if (val_autres_act == '== 0')
 		{
-		string_filtre += ' && ' type_act[i] + ' ==0 ' ;
+		string_filtre += ' && ' + type_act[i] + ' ==0 ' ;
 		}
 	}
 }
