--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ var tableau_test = [] ;
 function chargement_donnees()
 {
 tableau_test = data.filter(function(element) {
-    return (filtre_final);});
+    return (localStorage.getItem("filtre_final"));});
 	
 console.log(tableau_test) ;
 // on gère le filtrage des données en amont de tous les exemples... si l'envoi de vient pas du bouton
