--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ else
 		}
 	}
 }
-localStorage.setItem("filtre_final", JSON.stringify(string_filtre)) ;
+localStorage.setItem("filtre_final", JSON.stringify('"' + string_filtre + '"')) ;
 
 if (document.getElementById('asl2').checked)
 {
