--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ function chargement_donnees()
 {
 console.log(JSON.parse(localStorage.getItem("filtre_final"))) ;   
 tableau_test = data.filter(function(element) {
-    return (localStorage.getItem("filtre_final"));});
+    return (JSON.parse(localStorage.getItem("filtre_final")));});
 	
 console.log(tableau_test) ;
 // on gère le filtrage des données en amont de tous les exemples... si l'envoi de vient pas du bouton
@@ -290,7 +290,6 @@ tableau_sortie = data.filter(function(element) {
 	}
 	else
 	{
-console.log(localStorage.getItem("filtre_final"));
 // on place des filtres fonction de ce qui a été sélectionné par l'utilisateur
 	if (JSON.parse(localStorage.getItem("filtre_ASL")) === true)
 		{tableau_sortie = data.filter(function(element) {
