--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ var tableau_test = [] ;
 	
 function chargement_donnees()
 {
-console.log(JSON.parse(localStorage.getItem("filtre_final"))) ;   
+console.log(JSON.parse(localStorage.getItem("filtre_final")).replace('"','')) ;   
 tableau_test = data.filter(function(element) {
     return (JSON.parse(localStorage.getItem("filtre_final")).replace('"',''));});
 	
