--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ else
 		}
 	}
 }
-localStorage.setItem("filtre_final", JSON.stringify('"' + string_filtre + '"')) ;
+localStorage.setItem("filtre_final", JSON.stringify(string_filtre )) ;
 
 if (document.getElementById('asl2').checked)
 {
@@ -277,9 +277,9 @@ var tableau_test = [] ;
 	
 function chargement_donnees()
 {
-console.log(JSON.parse(localStorage.getItem("filtre_final")).replaceAll('"','')) ;   
+console.log(localStorage.getItem("filtre_final")) ;   
 tableau_test = data.filter(function(element) {
-    return (JSON.parse(localStorage.getItem("filtre_final")).replaceAll('"',''));});
+    return (eval(localStorage.getItem("filtre_final")));});
 	
 console.log(tableau_test) ;
 // on gère le filtrage des données en amont de tous les exemples... si l'envoi de vient pas du bouton
