--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@ if (!document.getElementById('type_act_' + (i+1)).checked)
 		}
 	}
 }
+console.log(string_final) ;
 localStorage.setItem("filtre_final", string_filtre ) ;
 
 if (document.getElementById('asl2').checked)
