--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ window.location.reload();
 
 <script>
 var tableau_test = [] ;
-	
+console.log(localStorage.getItem("filtre_final")) ;
 function chargement_donnees()
 { 
 tableau_test = data.filter(function(element) {
