--- a/index.html
+++ b/index.html
@@ -55,41 +55,28 @@
   border-radius: 8px">
   <legend><b>Vous pouvez filtrer les données selon les critères suivants (cocher les cases pour fixer les critères) :</b></legend>
 
-<fieldset style= "border: 1px solid #666;
-  border-radius: 8px">
-<div>
-<input type="checkbox" num_cb="1" id ="filtre_ASL" name="type_filtre"/>
-<label for="filtre_ASL">ASL</label><br>
-</div>
-<div class="radio_1" style="display: none;">
-<input type="radio" id ="asl1" name="asl"/ checked>
-<label for="asl1">pas de filtre ASL</label>
-<input type="radio" id ="asl2" name="asl"/>
-<label for="asl2">inscrits uniquement aux ASL</label>
-</div>
-</fieldset>
 	
 <fieldset style= "border: 1px solid #666;
   border-radius: 8px">
 <div>
-<input type="checkbox" num_cb="2" id ="filtre_benevole" name="type_filtre"/>
+<input type="checkbox" num_cb="1" id ="filtre_benevole" name="type_filtre"/>
 <label for="filtre_benevole">Bénévoles</label><br>
 </div>
-<div class="radio_2" style="display: none;">
+<div class="radio_1" style="display: none;">
 <input type="radio" id ="bene1" name="bene"/ checked>
-<label for="asl1">pas de filtre bénévole</label>
+<label for="bene1">pas de filtre bénévole</label>
 <input type="radio" id ="bene2" name="bene"/>
-<label for="asl2">bénévole sur au moins un type d'activité</label>
+<label for="bene2">bénévole sur au moins un type d'activité</label>
 </div>
 </fieldset>
 	
 <fieldset style= "border: 1px solid #666;
   border-radius: 8px">
 <div>
-<input type="checkbox" num_cb="3" id ="filtre_type_act" name="type_filtre"/>
+<input type="checkbox" num_cb="2" id ="filtre_type_act" name="type_filtre"/>
 <label for="filtre_type_act">Types d'activités auxquelles le public s'est inscrit</label><br>
 </div>
-<div class="radio_3" style="display: none;">
+<div class="radio_2" style="display: none;">
 <p><b><u>1- choix des activités</u></b></p>
 <script>
 const type_act = ['clas','acm','jeunesse','famille','sorties_famille','cartes_blanches','culture','sport','asl','paniers_bio','reveillon','autres'] ;
@@ -101,8 +88,8 @@ checkbox.id = "type_act_"+ (index+1) ;
 var label = document.createElement('label'); 
 label.htmlFor = "type_act_"+ (index+1) ; 
 label.appendChild(document.createTextNode(element)); 
-document.getElementsByClassName('radio_3')[0].appendChild(checkbox); 
-document.getElementsByClassName('radio_3')[0].appendChild(label); 
+document.getElementsByClassName('radio_2')[0].appendChild(checkbox); 
+document.getElementsByClassName('radio_2')[0].appendChild(label); 
 }) ;
 </script>
 <p><b><u>2- inscriptions à au moins une des activités sélectionnées OU à l'ensemble des activités sélectionnées</u></b></p>
@@ -125,10 +112,10 @@ document.getElementsByClassName('radio_3')[0].appendChild(label);
 <fieldset style= "border: 1px solid #666;
   border-radius: 8px">
 <div>
-<input type="checkbox" num_cb="4" id ="filtre_nb_act" name="type_filtre"/>
+<input type="checkbox" num_cb="3" id ="filtre_nb_act" name="type_filtre"/>
 <label for="filtre_nb_act">Nombre total d'inscriptions aux activités sur la période (choisir nombre minimum et maximum)</label><br>
 </div>
-<div class="radio_4" style="display: none;">
+<div class="radio_3" style="display: none;">
 <div style="height:80px">
 <div style="height:40px">
 </div>
@@ -726,7 +713,7 @@ L.circleMarker(coords, {radius: 2, color : 'purple'}).addTo(map_3);
 	exemple2();
 	exemple3();
         localStorage.setItem("btn_click", false);
-	localStorage.setItem("filtre_ASL", false);
+	localStorage.setItem("filtre_final", '');
     }
     
  </script>
