--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="1" id ="filtre_type_act" name="type_filtre"/>
-<label for="filtre_type_act">Types d'activités auxquelles le public s'est inscrit</label><br>
+<label for="filtre_type_act">Types d'activités auxquelles <b><u> la famille </b></u> s'est inscrit</label><br>
 </div>
 <div class="radio_1" style="display: none;">
 <p><b><u>1- choix des activités</u></b></p>
@@ -98,7 +98,7 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
   border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="2" id ="filtre_nb_act" name="type_filtre"/>
-<label for="filtre_nb_act">Nombre total d'inscriptions aux activités sur la période (choisir nombre minimum et maximum)</label><br>
+	<label for="filtre_nb_act">Nombre total d'inscriptions <b><u> de la famille </u></b> aux activités sur la période (choisir nombre minimum et maximum)</label><br>
 </div>
 <div class="radio_2" style="display: none;">
 <div style="height:80px">
@@ -115,7 +115,7 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
   border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="3" id ="filtre_benevole" name="type_filtre"/>
-<label for="filtre_benevole">Bénévoles</label><br>
+<label for="filtre_benevole">Bénévoles (au moins un membre de <b><u> la famille </b></u> a été bénévole) </label><br>
 </div>
 <div class="radio_3" style="display: none;">
 <input type="radio" id ="bene1" name="bene"/ checked>
@@ -128,7 +128,7 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
 </fieldset>
 
 <div>	
-<input type="button" id = "bouton_envoi" name="bout" value="Générer l'analyse" onClick="envoi_analyse()"
+<input type="button" id = "bouton_envoi" name="bout" value="Générer l'analyse en fonction des filtres" onClick="envoi_analyse()"
        style="height:50px; width:50%; margin-left:25%; margin-right:25%;margin-top: 0.5cm;margin-bottom: 0.5cm; background-color:#B0C4DE" />
 </div>
 
@@ -227,7 +227,7 @@ if (document.getElementById('choix_aumoins').checked)
 	{
 	val_autres_act = '== 0' ;
 	}
-// on traite le filtre tout d'abord avec les activités non sélectionnées pour avoir les bons opérateurs logiques
+// on traite tout d'abord le filtre pour les activités sélectionnées pour avoir les bons opérateurs logiques
 for (let i=0 ; i < type_act.length ; i++)
 {
 if (document.getElementById('type_act_' + (i+1)).checked)
@@ -253,6 +253,8 @@ if (!document.getElementById('type_act_' + (i+1)).checked)
 		}
 	}
 }
+// on traite maintenant le nombre d'activités
+
 console.log(string_filtre) ;
 localStorage.setItem("filtre_final", string_filtre ) ;
 
