--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="1" id ="filtre_type_act" name="type_filtre"/>
-<label for="filtre_type_act">Types d'activités auxquelles <b><u> la famille </b></u> s'est inscrit</label><br>
+<label for="filtre_type_act">Types d'activités auxquelles <b><u>la famille</b></u> s'est inscrite</label><br>
 </div>
 <div class="radio_1" style="display: none;">
 <p><b><u>1- choix des activités</u></b></p>
@@ -98,7 +98,7 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
   border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="2" id ="filtre_nb_act" name="type_filtre"/>
-	<label for="filtre_nb_act">Nombre total d'inscriptions <b><u> de la famille </u></b> aux activités sur la période (choisir nombre minimum et maximum)</label><br>
+	<label for="filtre_nb_act">Nombre total d'inscriptions de <b><u>la famille</u></b> aux activités sur la période<br>(placer les 2 curseurs aux nombres minimum et maximum souhaités)</label><br>
 </div>
 <div class="radio_2" style="display: none;">
 <div style="height:80px">
@@ -115,7 +115,7 @@ document.getElementsByClassName('radio_1')[0].appendChild(label);
   border-radius: 8px">
 <div>
 <input type="checkbox" num_cb="3" id ="filtre_benevole" name="type_filtre"/>
-<label for="filtre_benevole">Bénévoles (au moins un membre de <b><u> la famille </b></u> a été bénévole) </label><br>
+<label for="filtre_benevole">Contribution bénévole<br>(au moins un membre de <b><u>la famille</b></u> a été bénévole) </label><br>
 </div>
 <div class="radio_3" style="display: none;">
 <input type="radio" id ="bene1" name="bene"/ checked>
