--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@ noUiSlider.create(slider, {
     }],
     range: rangers,
     pips: {
-        mode: 'steps',
-        density: 3
+        mode: 'range',
+        density: 1
           }
 });
 </script>
