--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ noUiSlider.create(slider, {
     }],
     range: rangers,
     pips: {
-        mode: 'range',
+        mode: 'steps',
         density: 1
           }
 });
